fix carrousel display, responsive on mobile and desktop

--- a/src/components/PortfolioCarrousel/CarrouselContainer.css
+++ b/src/components/PortfolioCarrousel/CarrouselContainer.css
@@ -26,17 +26,18 @@
 }
 
 .carrousel-item {
-    width: fit-content;
+    width: 80%;
+    margin: 0 9%;
     display: inline-flex;
     overflow: hidden;
     gap: 2rem;
-    padding: 1rem;
+    padding: 1rem 1%;
 }
 
 .carrousel-item-card {
     padding: 1rem;
     background-color: #DEE8FF;
-    box-shadow: 5px 5px 15px #DDDDDD;
+    box-shadow: 0px 5px 15px #DDDDDD;
     border-radius: 20px;
     width: 90%;
     margin: 0 auto;
@@ -51,6 +52,8 @@
 @media (min-width: 700px) {
     .carrousel-item {
         width: 100%;
+        margin: 0;
+        padding: 1rem 0;
     }
 
     .carrousel-item-card {
